# cli-calculator

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cli_calculator/: __main__.py  evaluator.py
cli_calculator/lexemes/: __init__.py  binary_operators.py  constants.py  errors.py  functions.py  registry.py  unary_operators.py
cli_calculator/models/: errors.py  expression.py
cli_calculator/parsing/: errors.py  parser.py
tests/: integration_test.py  integration_tests.py  module_test.py  stress_test.py
tests/unit_tests/: test_evaluator.py  test_models.py  test_parser.py
