[project]
name = "cli-calculator"
version = "0.1.0"
description = "A simple python package implementation of a cli calculator"
authors = [
    {name = "Artem Kargopolov",email = "kur4g1n@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pyright = "^1.1.398"
pytest = "^8.3.5"
pytest-coverage = "^0.0"
flake8-pyproject = "^1.2.3"
isort = "^6.0.1"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
ignore = ["E701", "E704", "F403"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__main__.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "__repr__",
    "__str__",
]
fail_under = 95
precision = 2
show_missing = true

[tool.pytest.ini_options]
markers = [
    "stress",
]
